<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".views.activities.AppStatusActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="50dp"
        android:src="@drawable/lb_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/lebentechlogoContentDescription" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/statusImageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/statusTextView"
        style="@style/Style.TextView.Bold.Sans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/lbl_text_error"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSizeMax"
        app:layout_constraintTop_toBottomOf="@id/statusImageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/config_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/background_color"
        android:scaleType="fitXY"
        android:src="@drawable/ic_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/configButton" />

</androidx.constraintlayout.widget.ConstraintLayout>