<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_welcome_correct"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeUltra"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_welcome_name"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeMaxTitle"
            android:textColor="@color/colorWhite"
            android:textAlignment="center" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/iv_animation"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_employee_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_welcome_employee_number"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_animation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeMax"
            android:textColor="@color/colorWhite"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_happy_birthday"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_employee_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/textSizeUltra"
            android:fontFamily="@font/lb"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            android:textAlignment="center" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>