<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".views.activities.SedeConfigActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="50dp"
        android:src="@drawable/lb_logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/lbl_welcome"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/location_1"
            android:textSize="@dimen/textSizeUltra"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            style="@style/Style.TextView.Bold.Sans"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/endpoint_textfield"
            app:layout_constraintRight_toRightOf="@id/endpoint_textfield"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endpoint_textfield"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_title_url"
            app:startIconDrawable="@drawable/ic_endpoint"
            app:startIconTint="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/lbl_welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            app:boxStrokeColor="@color/text_input_layout_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endpointEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/androidID"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/endpoint_textfield"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
            android:layout_margin="30dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSizeNormal"
            android:textAlignment="center"
            android:text="@string/lbl_android_id"/>

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/androidID"
            app:layout_constraintLeft_toLeftOf="@+id/endpoint_textfield"
            app:layout_constraintRight_toRightOf="@+id/endpoint_textfield">
            <Button
                android:id="@+id/acceptButton"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/lbl_title_accept"
                android:textColor="@color/colorWhite"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor="@color/text_input_layout_stroke_color"/>
            <Button
                android:id="@+id/configButton"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/lbl_new_url"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/lbDarkBlue"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="150dp"
        android:background="@color/background_spinner_color"
        android:indeterminateTint="@color/lbDarkBlue"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>